# Honey-eng

./: .gitignore  CMakeLists.txt  main.c
engine/: util.c  util.h
engine/board/: bitboard.c  bitboard.h  precomp.c  precomp.h
engine/movegen/: gen_legal.c  gen_legal.h
engine/user/: input.c  input.h
